; ModuleID = '/home/carl/AnghaBench/linux/net/xdp/extr_xdp_umem.c_xdp_add_sk_umem.c'
source_filename = "/home/carl/AnghaBench/linux/net/xdp/extr_xdp_umem.c_xdp_add_sk_umem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xdp_umem = type { i32, i32 }
%struct.xdp_sock = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @xdp_add_sk_umem(%struct.xdp_umem* %0, %struct.xdp_sock* %1) #0 {
  %3 = alloca %struct.xdp_umem*, align 8
  %4 = alloca %struct.xdp_sock*, align 8
  %5 = alloca i64, align 8
  store %struct.xdp_umem* %0, %struct.xdp_umem** %3, align 8
  store %struct.xdp_sock* %1, %struct.xdp_sock** %4, align 8
  %6 = load %struct.xdp_sock*, %struct.xdp_sock** %4, align 8
  %7 = getelementptr inbounds %struct.xdp_sock, %struct.xdp_sock* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %2
  br label %25

11:                                               ; preds = %2
  %12 = load %struct.xdp_umem*, %struct.xdp_umem** %3, align 8
  %13 = getelementptr inbounds %struct.xdp_umem, %struct.xdp_umem* %12, i32 0, i32 0
  %14 = load i64, i64* %5, align 8
  %15 = call i32 @spin_lock_irqsave(i32* %13, i64 %14)
  %16 = load %struct.xdp_sock*, %struct.xdp_sock** %4, align 8
  %17 = getelementptr inbounds %struct.xdp_sock, %struct.xdp_sock* %16, i32 0, i32 0
  %18 = load %struct.xdp_umem*, %struct.xdp_umem** %3, align 8
  %19 = getelementptr inbounds %struct.xdp_umem, %struct.xdp_umem* %18, i32 0, i32 1
  %20 = call i32 @list_add_rcu(i32* %17, i32* %19)
  %21 = load %struct.xdp_umem*, %struct.xdp_umem** %3, align 8
  %22 = getelementptr inbounds %struct.xdp_umem, %struct.xdp_umem* %21, i32 0, i32 0
  %23 = load i64, i64* %5, align 8
  %24 = call i32 @spin_unlock_irqrestore(i32* %22, i64 %23)
  br label %25

25:                                               ; preds = %11, %10
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @list_add_rcu(i32*, i32*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
